Fix all element inside hero section hiding behind the pseudo element

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
-  z-index: -2;
+  z-index: 0;
 }
 
 .hero-section::before {
